--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -5,11 +5,14 @@
 
 <tiles-definitions>
 
+  <definition name="index" extends="public">
+    <put-attribute name="central" value="/WEB-INF/views/index.jsp" />
+  </definition>
   
   <definition name="central" extends="public">
     <put-attribute name="central" value="/WEB-INF/views/central.jsp" />
   </definition>
-  
+
 
   <definition name="dataAccessFailure" extends="public">
     <put-attribute name="central" value="/WEB-INF/views/dataAccessFailure.jsp" />
