--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -85,6 +85,23 @@
 	margin-bottom: 10px;
 }
 
+.listRoom {
+	border: solid 1px;
+	padding: 10px;
+	width: 200px;
+	height: 40px;
+	margin-left:50px;
+	margin-right:0px;"
+	text-align: center;
+	font-size: 16px;
+	border-radius: 10px 10px 0px 0px;
+	margin-bottom: 10px;
+}
+
+.plistelem {
+	cursor: pointer; 
+}
+
 .text_value {
 	width: 250px;
 	height: 25px;
@@ -132,18 +149,18 @@
 	cursor: pointer;
 	border: solid 1px #F0F0F0;
 	border-radius: 5px 5px 5px 5px;
-	padding: 5px;
+	/*padding: 5px;*/
 	background-color: #FF6600;
 	color: white;
 	opacity: 0.7;
 	padding: 5px;
-	margin-top: -8px;
+	margin-top: -5px;
 	font-size: 11px;
-	transform:scale(1.1);
+/*	transform:scale(1.1);
     -ms-transform:scale(1.1);
     -moz-transform:scale(1.1);
     -webkit-transform:scale(1.1); 
-    -o-transform:scale(1.1); 
+    -o-transform:scale(1.1); */
 }
 
 #list_view  {
