--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -78,7 +78,7 @@
 	border: solid 1px;
 	padding: 10px;
 	height: 160px;
-	width: 400px;
+	width: 350px;
 	margin-left: auto;
 	margin-right: auto;
 	box-shadow: 8px 8px 5px #888888;
@@ -99,7 +99,19 @@
 	margin-bottom: 10px;
 	background-color: #F0F0F0;
 }
-
+.listOptions2 {
+	border: solid 1px;
+	padding: 10px;
+	width: 350px;
+	height: 40px;
+	margin-left: auto;
+	margin-right: auto; "
+	text-align: center;
+	font-size: 16px;
+	border-radius: 10px 10px 0px 0px;
+	margin-bottom: 10px;
+	background-color: #F0F0F0;
+}
 .listRoom {
 	border: solid 1px;
 	padding: 10px;
@@ -122,7 +134,7 @@
 }
 
 .text_value {
-	width: 250px;
+	width: 200px;
 	height: 25px;
 	border-radius: 5px 5px 5px 5px;
 	margin: 5px 0px;
@@ -145,9 +157,9 @@
 }
 
 .submitBtn {
-	width: 140px;
+	width: 100px;
 	height: 30px;
-	margin-left: 220px;
+	margin-left: 180px;
 	margin-top: 10px;
 }
 
