--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -91,8 +91,8 @@
 	padding: 10px;
 	width: 250px;
 	height: 40px;
-	margin-left: 50px;
-	margin-right: 0px; "
+	margin-left: 0px;
+	margin-right: 0px; 
 	text-align: center;
 	font-size: 16px;
 	border-radius: 10px 10px 0px 0px;
