--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -82,7 +82,8 @@ li{
 
 .container{
 	width: 100%;
-	height: 650px;
+	height: 430px;
+	margin-top: 20px;
 	border: 0px solid;
 	/*float: left;*/
 	/*margin: 50px 10px 10px;*/
