--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -7,9 +7,9 @@
 	<definition name="index" extends="public">
 		<put-attribute name="central" value="/WEB-INF/views/index.jsp" />
 	</definition>
-
-
-
+<definition name="login" extends="public">
+		<put-attribute name="central" value="/WEB-INF/views/login.jsp" />
+	</definition>
 
 	<definition name="dataAccessFailure" extends="public">
 		<put-attribute name="central"
